Reetan.Nayak Dev 25/force-app/main/default/objects/Chatter_Settings__c/Chatter_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting used for Chatter</description>
    <label>Chatter Settings</label>
</CustomObject>