Reetan.Nayak Dev 25/force-app/main/default/objects/Chatter_Settings__c/fields/Auto_Unfollow_Opps_after_x_Days__c.field-meta.xml
<CustomField>
    <fullName>Auto_Unfollow_Opps_after_x_Days__c</fullName>
    <label>Auto Unfollow Opps after x Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>