Reetan.Nayak Dev 25/force-app/main/default/objects/Chatter_Settings__c/fields/Auto_Unfollow_Opps_Criteria_2__c.field-meta.xml
<CustomField>
    <fullName>Auto_Unfollow_Opps_Criteria_2__c</fullName>
    <label>Auto Unfollow Opps Criteria 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>