Reetan.Nayak Dev 25/force-app/main/default/objects/Chatter_Settings__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <label>Next_Step</label>
    <length>50</length>
    <type>Text</type>
</CustomField>